--- a/login.html
+++ b/login.html
@@ -12,6 +12,7 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
+      margin: 0;
       background-color: #f0f0f0;
     }
     .login-container {
@@ -21,15 +22,13 @@
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
       text-align: center;
     }
-    input {
-      width: 100%;
+    input [type="password"] {
       padding: 10px;
       margin-bottom: 10px;
       border: 1px solid #ccc;
       border-radius: 4px;
     }
     button {
-      width: 100%;
       padding: 10px;
       background-color: #4CAF50;
       color: white;
@@ -45,24 +44,25 @@
 <body>
     <div class="login-container">
         <h2>Iniciar Sesión</h2>
-        <input type="text" id="username" placeholder="Nombre de usuario">
-        <input type="password" id="password" placeholder="Contraseña">
-        <button onclick="login()">Iniciar</button>
+        <div>
+            <input type="password" id="password" placeholder="Contraseña">
+            <button onclick="login()">Iniciar</button>
+          </div>
       </div>
 
       <script>
         function login() {
-      const username = document.getElementById('username').value;
+
       const password = document.getElementById('password').value;
 
       
-      if (username === 'usuario' && password === '1234') {
-        
+      if (password === '1234') {
+        // login exitoso
         const { ipcRenderer } = require('electron');
         ipcRenderer.send('login-success');
-        } else {
-        alert('Credenciales incorrectas');
-        }
+      } else {
+        alert('Contraseña incorrecta');
+      }
         }
       </script>
 </body>
