--- a/login.html
+++ b/login.html
@@ -56,10 +56,8 @@
       const password = document.getElementById('password').value;
 
       
-      if (password === '1234') {
-        // login exitoso
-        const { ipcRenderer } = require('electron');
-        ipcRenderer.send('login-success');
+      if (password === '1234') {   // login exitoso
+        window.electron.sendLoginSuccess(); // proceso que lleva a la pagina principal
       } else {
         alert('Contraseña incorrecta');
       }
