fondo solarix en login

--- a/login.html
+++ b/login.html
@@ -13,7 +13,10 @@
       align-items: center;
       height: 100vh;
       margin: 0;
-      background-color: #f0f0f0;
+      background-image: url('img/solarix.jpg'); /* Cambia 'tu-imagen.jpg' por el nombre de tu imagen */
+      background-size: cover; /* Para que cubra toda la pantalla */
+      background-position: center; /* Para centrar la imagen */
+      background-repeat: no-repeat; /* Para que no se repita */
     }
     .login-container {
       background-color: #fff;
