Creacion de panel de apagar, y  cerrar sesion, implementacion de metodos para el apagado y el cierre de sesion

--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
     </div>
 
     <div class="barra-iconos">
-      <button id="btn-chrome"></button>
+      <button class="btn-barra-iconos" id="btn-chrome"></button>
 
-      <button id="btn-block"></button>
+      <button class="btn-barra-iconos" id="btn-block"></button>
 
-      <button id="btn-archivos"></button>
+      <button class="btn-barra-iconos" id="btn-archivos"></button>
 
-      <button id="btn-terminal"></button>
+      <button class="btn-barra-iconos"  id="btn-terminal"></button>
 
-      <button id="btn-calculadora"></button>
+      <button class="btn-barra-iconos" id="btn-calculadora"></button>
     </div>
 
   <section class="menu-desplegable">
@@ -105,14 +105,21 @@
       </div>
 
       <div class="seccion-favoritos">
-      
+        <img src="img/app.jpg" alt="">
       </div>
-    
-
     </div>
+  </section>
 
-  
-   
+  <section class="menu-apagar">
+      <button class="btn-menu-apagar" id="btn-suspender">
+        Suspender
+      </button>
+      <button class="btn-menu-apagar" id="btn-cerrar-sesion">
+        Cerrar Sesion
+      </button>
+       <button class="btn-menu-apagar" id="btn-apagar">
+        Apagar
+      </button>
   </section>
   </body>
   <script src="./renderer.js" type="module"></script>
