--- a/login.html
+++ b/login.html
@@ -13,17 +13,22 @@
       align-items: center;
       height: 100vh;
       margin: 0;
-      background-image: url('img/solarix.jpg'); /* Cambia 'tu-imagen.jpg' por el nombre de tu imagen */
-      background-size: cover; /* Para que cubra toda la pantalla */
-      background-position: center; /* Para centrar la imagen */
-      background-repeat: no-repeat; /* Para que no se repita */
+      background-image: url('img/solarix.jpg'); 
+      background-size: cover; 
+      background-position: center;
+      background-repeat: no-repeat; 
     }
     .login-container {
-      background-color: #fff;
+      width: 300px; 
+      height: 200px; 
       padding: 30px;
-      border-radius: 8px;
+      border-radius: px;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
       text-align: center;
+      position: absolute; 
+      top: 350px; 
+      left: 78px; 
+
     }
     input [type="password"] {
       padding: 10px;
