--- a/login.html
+++ b/login.html
@@ -18,18 +18,33 @@
       background-position: center;
       background-repeat: no-repeat; 
     }
+
+
+    .parrafo {
+            color: rgb(255, 255, 255); /* Establece el color del texto */
+            font-size: 24px; /* Tamaño del texto */
+            position: absolute; 
+            top: 410px; 
+            left: -34%;
+            text-align: center;
+            font-family: 'Arial', sans-serif;
+            width: 100%; /* Para centrar el texto */
+        }
+    
+
     .login-container {
       width: 300px; 
-      height: 200px; 
+      height: 210px; 
       padding: 30px;
       border-radius: px;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
       text-align: center;
       position: absolute; 
-      top: 350px; 
+      top: 400px; 
       left: 78px; 
-
+      
     }
+
     input [type="password"] {
       padding: 10px;
       margin-bottom: 10px;
@@ -47,14 +62,23 @@
     button:hover {
       background-color: #45a049;
     }
+
+
+
+
 </style>
 </head>
 <body>
+
+    <div class="parrafo">
+    USUARIO 1
+      </div>
+
     <div class="login-container">
-        <h2>Iniciar Sesión</h2>
+        <h2></h2>
         <div>
             <input type="password" id="password" placeholder="Contraseña">
-            <button onclick="login()">Iniciar</button>
+            <button onclick="login()">Entrar</button>
           </div>
       </div>
 
