arreglo fondo boton entrar

--- a/login.html
+++ b/login.html
@@ -53,7 +53,7 @@
     }
     button {
       padding: 10px;
-      background-color: #4CAF50;
+      background-color: #0394ae;
       color: white;
       border: none;
       border-radius: 4px;
