Creacion de menu cam-timer, sepacion de estilos

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       content="default-src 'self'; script-src 'self'"
     />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles_menus.css" />
     <title>SOLARIX🧨</title>
   </head>
   <body>
@@ -29,7 +30,6 @@
         <button class="btn-logos-sistema" id="btn-wifi"></button>
         <button class="btn-logos-sistema" id="btn-bateria"></button>
         <button class="btn-logos-sistema" id="btn-speaker"></button>
-        <button class="btn-logos-sistema" id="btn-wifi"></button>
         <button class="btn-logos-sistema" id="btn-power"></button>
       </div>
     </div>
@@ -120,6 +120,73 @@
        <button class="btn-menu-apagar" id="btn-apagar">
         Apagar
       </button>
+  </section>
+
+  <section class="menu-cam-timer">
+    <img class="img-cam" src="img/cam.jpg" alt="">
+    <h3>CAM~TIMER</h3>
+    <div class="menu-cam-contenedores">
+      <img src="img/monitor.jpg" alt="">
+      <div>
+        <h5>tiempo en pantalla</h5>
+      </div>
+     <div>
+      <p>12</p>
+     </div>
+    </div>
+    <div class="menu-cam-contenedores">
+      <img src="img/bateria.jpg" alt="">
+      <div>
+        <h5>bateria restante</h5>
+      </div>
+      <div>
+        <p>12</p>
+       </div>
+    </div>
+    <div class="menu-cam-contenedores">
+      <img src="img/game.jpg" alt="">
+      <div>
+        <h5>juegos abiertos</h5>
+      </div>
+      <div>
+        <p>2</p>
+       </div>
+    </div>
+    <div class="menu-cam-contenedores">
+      <img src="img/pause.jpg" alt="">
+      <div>
+        <h5>pausas realizadas</h5>
+      </div>
+      <div>
+        <p>12</p>
+       </div>
+    </div>
+    <div class="menu-cam-contenedores">
+      <img src="img/clock.jpg" alt="">
+      <div>
+        <h5>tiempo descansado</h5>
+      </div>
+      <div>
+        <p>12</p>
+       </div>
+    </div>
+    <div class="menu-cam-contenedores">
+      <img src="" alt="">
+      <div>
+        <h5>TIEMPO EN PANTALLA</h5>
+      </div>
+      <div>
+        <p>12</p>
+       </div>
+    </div>
+    <div class="menu-cam-sugerencia">
+      <h3> <i>SUGERENCIA</i></h3>
+      <img src="img/descanso.jpg" alt="">
+      <div class="menu-cam-botones">
+        <button class="btn-sugerencias" id="btn-cam-aceptar">ACEPTAR</button>
+        <button class="btn-sugerencias" id="btn-cam-omitir">OMITIR</button>
+      </div>
+    </div>
   </section>
   </body>
   <script src="./renderer.js" type="module"></script>
