--- a/inicio.html
+++ b/inicio.html
@@ -2,7 +2,6 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Cargando...</title>
   <style>
     body {
       margin: 0;
@@ -13,8 +12,12 @@
       align-items: center;
       justify-content: center;
       flex-direction: column;
-      color: white;
-      font-family: Arial, sans-serif;
+      color: rgb(255, 255, 255);
+      font-family: Amasis MT Pro Light (negrita);
+      position: absolute; 
+      top: 50%; 
+      left: 42%;
+      font-size: 22px; 
     }
     video {
       width: 200px;
