--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
             top: 410px; 
             left: -34%;
             text-align: center;
-            font-family: 'Arial', sans-serif;
+            font-family: Amasis MT Pro Light (negrita);
             width: 100%; /* Para centrar el texto */
         }
     
