agregacion animacion de cargar

--- a/inicio.html
+++ b/inicio.html
@@ -27,7 +27,7 @@
 </head>
 <body>
     <video autoplay muted loop>
-        <source src="./ruta/del/video.mp4" type="video/mp4">
+        <source src="./video/animacion_cargar.mp4" type="video/mp4">
         Tu navegador no soporta video.
       </video>
       <div class="cargando">Cargando...</div>
