--- a/inicio.html
+++ b/inicio.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="styles.css"> 
   <style>
     body {
       margin: 0;
@@ -19,18 +20,10 @@
       left: 42%;
       font-size: 22px; 
     }
-    video {
-      width: 200px;
-      height: auto;
-    }
   </style>
 </head>
 <body>
-    <video autoplay muted loop>
-        <source src="./video/animacion_cargar.mp4" type="video/mp4">
-        Tu navegador no soporta video.
-      </video>
-      <div class="cargando">Cargando...</div>
-
+    <img src="./video/cargar_anima.gif" alt="Cargando...">
+    <div class="cargando">Cargando...</div>
 </body>
   </html>
