complementacion ventana login completo

--- a/inicio.html
+++ b/inicio.html
@@ -2,7 +2,6 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="styles.css"> 
   <style>
     body {
       margin: 0;
@@ -16,9 +15,13 @@
       color: rgb(255, 255, 255);
       font-family: Amasis MT Pro Light (negrita);
       position: absolute; 
-      top: 50%; 
+      top: 38%; 
       left: 42%;
       font-size: 22px; 
+    }
+    img {
+      width: 200px;
+      height: auto;
     }
   </style>
 </head>
