arreglo tamaño de cam timer para agregacion de videos

--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
     <div class="menu-cam-sugerencia">
       <h3> <i>SUGERENCIA</i></h3>
       <img src="img/descanso.jpg" alt="">
-      <p> <i>TOMAR DESCANSO</i></p>
+      <p> <i>TOMAR DESCANSO<br>REALIZANDO PAUSAS ACTIVAS<br></i></p>
       <div class="menu-cam-botones">
-        <button  id="btn-cam-aceptar">ACEPTAR</button>
+        <button  id="btn-cam-aceptar">REALIZADO</button>
         <button  id="btn-cam-omitir">OMITIR</button>
       </div>
     </div>
