--- a/index.html
+++ b/index.html
@@ -180,6 +180,25 @@
         <button  id="btn-cam-omitir">OMITIR</button>
       </div>
     </div>
+
+    <div class="menu-cam-videos">
+  <video class="video-sugerencia" controls>
+    <source src="video/pausa_cuello.mp4" type="video/mp4">
+    Tu navegador no soporta video HTML5.
+  </video>
+  <video class="video-sugerencia" controls>
+    <source src="video/pausa_pierna.mp4" type="video/mp4">
+    Tu navegador no soporta video HTML5.
+  </video>
+  <video class="video-sugerencia" controls>
+    <source src="video/pausa_espalda.mp4" type="video/mp4">
+    Tu navegador no soporta video HTML5.
+  </video>
+</div>
+
+
+
+
   </div>
 </section>
   </body>
