colocacion de valoracion de plus

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <title>SOLARIX🧨</title>
   </head>
   <body>
+
     <div class="barra-tareas">
       <div class="logo">
         <button id="btn-logo"></button>
@@ -171,6 +172,7 @@
         <p>hmm</p>
        </div>
     </div>
+    
     <div class="menu-cam-sugerencia">
       <h3> <i>SUGERENCIA</i></h3>
       <img src="img/descanso.jpg" alt="">
@@ -181,21 +183,31 @@
       </div>
     </div>
 
-  <div class="menu-cam-videos">
-  <video class="video-sugerencia" controls>
-    <source src="video/pausa_cuello.mp4" type="video/mp4">
-    Tu navegador no soporta video HTML5.
-  </video>
-  <video class="video-sugerencia" controls>
-    <source src="video/pausa_pierna.mp4" type="video/mp4">
-    Tu navegador no soporta video HTML5.
-  </video>
-  <video class="video-sugerencia" controls>
-    <source src="video/pausa_espalda.mp4" type="video/mp4">
-    Tu navegador no soporta video HTML5.
-  </video>
-</div>
+    <div class="menu-cam-videos">
+    <video class="video-sugerencia" controls>
+      <source src="video/pausa_cuello.mp4" type="video/mp4">
+      Tu navegador no soporta video HTML5.
+    </video>
+    <video class="video-sugerencia" controls>
+      <source src="video/pausa_pierna.mp4" type="video/mp4">
+      Tu navegador no soporta video HTML5.
+    </video>
+    <video class="video-sugerencia" controls>
+      <source src="video/pausa_espalda.mp4" type="video/mp4">
+      Tu navegador no soporta video HTML5.
+    </video>
+  </div>
 
+
+  <div class="container">
+      <div class="rating">
+        <input type="radio" name="clr3" style="--c:#2ae418">
+        <input type="radio" name="clr3" style="--c:#2ae418">
+        <input type="radio" name="clr3" style="--c:#2ae418">
+        <input type="radio" name="clr3" style="--c:#2ae418">
+        <input type="radio" name="clr3" style="--c:#2ae418">
+      </div>
+    </div>
 
 
 
