--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       http-equiv="X-Content-Security-Policy"
       content="default-src 'self'; script-src 'self'"
     />
+    <link rel="stylesheet" href="./assets/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="styles_menus.css" />
     <title>SOLARIX🧨</title>
