agregacion mensaje de "valoracion del servicio" y arreglo de ubicacion de texto de login

--- a/index.html
+++ b/index.html
@@ -184,6 +184,10 @@
       </div>
     </div>
 
+    
+    <p class="valoracion-estrellas">VALORACIÓN DEL <br>SERVICIO</br> </p>
+
+
     <div class="menu-cam-videos">
     <video class="video-sugerencia" controls>
       <source src="video/pausa_cuello.mp4" type="video/mp4">
