texto en blanco para centrar el texto del menu de cam timer

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <div class="menu-cam-contenedores">
       <img src="img/monitor.jpg" alt="">
       <div>
-        <h5>tiempo en pantalla</h5>
+        <h5>ㅤㅤㅤtiempo en pantalla</h5>
       </div>
      <div>
       <p id="tiempo-pantalla"></p>
@@ -140,7 +140,7 @@
     <div class="menu-cam-contenedores">
       <img src="img/bateria.jpg" alt="">
       <div>
-        <h5>bateria restante</h5>
+        <h5>ㅤㅤㅤbateria restante</h5>
       </div>
       <div>
         <p id="bateria-restante">12</p>
@@ -149,7 +149,7 @@
     <div class="menu-cam-contenedores">
       <img src="img/game.jpg" alt="">
       <div>
-        <h5>juegos abiertos</h5>
+        <h5>ㅤjuegos abiertos</h5>
       </div>
       <div>
         <p>0</p>
@@ -158,7 +158,7 @@
     <div class="menu-cam-contenedores">
       <img src="img/pause.jpg" alt="">
       <div>
-        <h5>pausas realizadas</h5>
+        <h5>ㅤpausas realizadas</h5>
       </div>
       <div>
         <p>0</p>
@@ -167,7 +167,7 @@
     <div class="menu-cam-contenedores">
       <img src="img/clock.jpg" alt="">
       <div>
-        <h5>tiempo descansado</h5>
+        <h5>ㅤㅤㅤtiempo descansado</h5>
       </div>
       <div>
         <p>hmm</p>
