--- a/index.html
+++ b/index.html
@@ -188,6 +188,21 @@
     <p class="valoracion-estrellas">VALORACIÓN DEL <br>SERVICIO</br> </p>
 
 
+    <div class="pausa-texto">
+      <p> RECOMENDACIONES<br>PAUSA ACTIVA</br></p>
+    </div>
+
+    <div class="pausa-textoescrito">
+      <p> 💪 → Movilidad articular</p>
+      <p> 🫁 → Respiración</p>
+      <p> 💧 → Beber agua</p>
+      <p> 🪟 → Mirar por la ventana</p>
+      <p> 🚶 → Caminar</p>
+
+    </div>
+
+
+
     <div class="menu-cam-videos">
     <video class="video-sugerencia" controls>
       <source src="video/pausa_cuello.mp4" type="video/mp4">
