creacion contador html

--- a/index.html
+++ b/index.html
@@ -229,6 +229,16 @@
       </div>
     </div>
 
+  
+
+  <div class="timer-container">
+      <div class="date-display">00:00:00</div>
+      <div class="timer">
+        <button class="btn-start">Iniciar</button>
+        <button class="btn-stop">Detener</button>
+        <button class="btn-reset">Reiniciar</button>
+      </div>
+      </div>
 
 
   </div>
