--- a/index.html
+++ b/index.html
@@ -234,9 +234,9 @@
   <div class="timer-container">
       <div class="date-display">00:00:00</div>
       <div class="timer">
-        <button class="btn-start">Iniciar</button>
-        <button class="btn-stop">Detener</button>
-        <button class="btn-reset">Reiniciar</button>
+        <button class="btn start">Iniciar</button>
+        <button class="btn stop">Detener</button>
+        <button class="btn reset">Reiniciar</button>
       </div>
       </div>
 
