--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           <h5>pausas realizadas</h5>
         </div>
         <div class="cam-container-texto">
-          <p>0</p>
+          <p id="pausas-txt">0</p>
         </div>
       </div>
 
@@ -189,7 +189,7 @@
           <h5>tiempo descansado</h5>
         </div>
         <div class="cam-container-texto">
-          <p>hmm</p>
+          <p id="tiempo-txt">0</p>
         </div>
       </div>
 
@@ -208,61 +208,58 @@
   </section>
 
   <section class="menu-ejercicio">
-
-    <p class="valoracion-estrellas">VALORACIÓN DEL <br>SERVICIO</br> </p>
-
-    <div class="ejercicio-texto">
+    <div class="menu-ejercicio-container">
       <div class="pausa-texto">
-        <p> RECOMENDACIONES<br>PAUSA ACTIVA</br></p>
+        <p> RECOMENDACIONES <br> DE LA PAUSA ACTIVA</br></p>
+      </div>
+      <div class="ejercicio-contenedor">
+
+        <div class="pausa-textoescrito">
+          <p> 💪 Movilidad articular</p>
+          <p> 😤 Respiración</p>
+          <p> 💧 Beber agua</p>
+          <p> 🧐 Mirar por la ventana</p>
+          <p> 🚶 Caminar</p>
+        </div>
+
+        <div class="menu-cam-videos">
+          <video class="video-sugerencia" controls>
+            <source src="video/pausa_cuello.mp4" type="video/mp4">
+            Tu navegador no soporta video HTML5.
+          </video>
+          <video class="video-sugerencia" controls>
+            <source src="video/pausa_pierna.mp4" type="video/mp4">
+            Tu navegador no soporta video HTML5.
+          </video>
+          <video class="video-sugerencia" controls>
+            <source src="video/pausa_espalda.mp4" type="video/mp4">
+            Tu navegador no soporta video HTML5.
+          </video>
+        </div>
+
+
+        <div class="timer-container">
+          <div class="date-display">00:00:00</div>
+          <div class="timer">
+            <button class="btn start">Iniciar</button>
+            <button class="btn stop">Detener</button>
+            <button class="btn reset">Reiniciar</button>
+          </div>
+        </div>
+
       </div>
 
-      <div class="pausa-textoescrito">
-        <p> 💪 → Movilidad articular</p>
-        <p> 🫁 → Respiración</p>
-        <p> 💧 → Beber agua</p>
-        <p> 🪟 → Mirar por la ventana</p>
-        <p> 🚶 → Caminar</p>
+      <div class="container-estrellas">
+        <div class="rating">
+          <input type="radio" name="clr3" style="--c:#2ae418">
+          <input type="radio" name="clr3" style="--c:#2ae418">
+          <input type="radio" name="clr3" style="--c:#2ae418">
+          <input type="radio" name="clr3" style="--c:#2ae418">
+          <input type="radio" name="clr3" style="--c:#2ae418">
+        </div>
       </div>
+          <button id="btn-cerrar-ejercicios">CERRAR</button>
     </div>
-
-
-    <div class="menu-cam-videos">
-      <video class="video-sugerencia" controls>
-        <source src="video/pausa_cuello.mp4" type="video/mp4">
-        Tu navegador no soporta video HTML5.
-      </video>
-      <video class="video-sugerencia" controls>
-        <source src="video/pausa_pierna.mp4" type="video/mp4">
-        Tu navegador no soporta video HTML5.
-      </video>
-      <video class="video-sugerencia" controls>
-        <source src="video/pausa_espalda.mp4" type="video/mp4">
-        Tu navegador no soporta video HTML5.
-      </video>
-    </div>
-
-
-    <div class="container">
-      <div class="rating">
-        <input type="radio" name="clr3" style="--c:#2ae418">
-        <input type="radio" name="clr3" style="--c:#2ae418">
-        <input type="radio" name="clr3" style="--c:#2ae418">
-        <input type="radio" name="clr3" style="--c:#2ae418">
-        <input type="radio" name="clr3" style="--c:#2ae418">
-      </div>
-    </div>
-
-
-
-    <div class="timer-container">
-      <div class="date-display">00:00:00</div>
-      <div class="timer">
-        <button class="btn start">Iniciar</button>
-        <button class="btn stop">Detener</button>
-        <button class="btn reset">Reiniciar</button>
-      </div>
-    </div>
-
 
   </section>
 
